--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+# Ignorar la base de datos
+src/mainBank/database/PersonalBank.db
+
 
 ### Eclipse ###
 .apt_generated
