--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>mainBank.LogInWindow</mainClass>
+                                    <mainClass>mainBank.windows.LogInWindow</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
